--- a/htdocs/html/index_rodape_cima.htm
+++ b/htdocs/html/index_rodape_cima.htm
@@ -1,22 +1,1 @@
-<ul class='horizontal'>
-	<li><a href='http://www.brasil.gov.br/?set_language=pt-br' target='_blank'><img alt="Hospedado e desenvolvido no Brasil" text="Hospedado e desenvolvido no Brasil" src='./img/flags-brazil.png' /></a></li>
-	<li><a href='http://www.vim.org/' target='_blank'><img alt="Designed using VIM" text="Designed using VIM" src='./img/designed_using_vim.png' /></a></li>
-	<li><a href='http://www.gimp.org/' target='_blank'><img alt="Designed with G.I.M.P." text="Designed with G.I.M.P." src='./img/designed_with_gimp.png' /></a></li>
-	<li><a href='https://www.kernel.org/' target='_blank'><img alt="Powered by Linux" text="Powered by Linux" src='./img/powered_by_linux.png' /></a></li>
-	<li><a href='http://www.debian.org/' target='_blank'><img alt="Powered by Debian" text="Powered by Debian" src='./img/linux_distribution-debian.png' height='32' widht='32' /></a></li>
-	<li><a href='http://www.rssboard.org/rss-specification' target='_blank'><img alt="Powered by RSS" text="Powered by RSS" src='./img/rss-feed.png' height='32' widht='32' /></a></li>
-	<li><a href='https://pt.wikipedia.org/wiki/Banco_de_dados' target='_blank'><img alt="Powered by text/plain" text="Powered by text/plain" src='./img/database.png' height='32' widht='32' /></a></li>
-	<li><a href='http://www.cpan.org' target='_blank'><img alt="Powered by Perl" text="Powered by Perl" src='./img/application-x-perl-2.png' height='32' widht='32' /></a></li>
-	<li><a href='https://pt.wikipedia.org/wiki/Cascading_Style_Sheets' target='_blank'><img alt="Powered by CSS" text="Powered by CSS" src='./img/text-css.png' height='32' widht='32' /></a></li>
-	<li><a href='https://pt.wikipedia.org/wiki/HTML' target='_blank'><img alt="Powered by HTML" text="Powered by HTML" src='./img/text-html.png' height='32' widht='32' /></a></li>
-	<li><a href='http://progmofo.com' target='_blank'><img alt="Powered by CLI" text="Powered by CLI" src='./img/chardevice.png' height='32' widht='32' /></a></li>
-	<li><a href='https://creativecommons.org/' target='_blank'><img alt="Licença Creative Commons" text="Licença Creative Commons" src='./img/licenses-cc-creative_commons.png' height='32' widht='32' /></a></li>
-	<li><a href='http://www.gnu.org/copyleft/copyleft.html' target='_blank'><img alt="Licençe Copyleft" text="Licença Copyleft" src='./img/licenses-copyleft.png' height='32' widht='32' /></a></li>
-	<li><a href='http://www.kopimi.com/kopimi/' target='_blank'><img alt="Licença Kopimi" text="Licença Kopimi" src='./img/licenses-kopimi.png' height='32' widht='32' /></a></li>
-	<li><a href='https://github.com/iuriguilherme/iuri.blog.br' target='_blank'><img alt="Código fonte do site" text="Código fonte do site" src='./img/save_as-2.png' height='32' widht='32' /></a></li>
-</ul>
-<hr>
-<div class='divisoria'></div>
-</div>
-<div class='rodape'>
-<hr>
+/home/iggy/var/sites/blog/htdocs/html/index_rodape_cima.htm
