--- a/htdocs/html/index_corpo_posts_baixo_1.htm
+++ b/htdocs/html/index_corpo_posts_baixo_1.htm
@@ -1,4 +1,1 @@
-	</tbody>
-	<tfoot>
-		<tr>
-			<td colspan='2'><strong>Total de postagens exibidas:</strong></td>
+/home/iggy/var/sites/blog/htdocs/html/index_corpo_posts_baixo_1.htm
