Consertei os modos dos arquivos

--- a/htdocs/html/index_corpo_posts_baixo_1.htm
+++ b/htdocs/html/index_corpo_posts_baixo_1.htm
@@ -1,1 +1,4 @@
-/home/iggy/var/sites/blog/htdocs/html/index_corpo_posts_baixo_1.htm
+	</tbody>
+	<tfoot>
+		<tr>
+			<td colspan='2'><strong>Total de postagens exibidas:</strong></td>
