--- a/htdocs/html/index_metadados.htm
+++ b/htdocs/html/index_metadados.htm
@@ -1,1 +1,13 @@
-/home/iggy/var/sites/blog/htdocs/html/index_metadados.htm
+<!DOCTYPE html>
+<html dir='auto' lang='pt-BR'>
+<head>
+	<meta name='description' content="I.U.R.I. - Igreja Universal do Reino do IURI" />
+	<meta name='keywords' content="I.U.R.I., iuri, iuri guilherme, iuri guilherme dos santos martins, porto alegre, expressão" />
+	<link rel='shorcut icon' href='favicon.ico' />
+	<link rel='stylesheet' type='text/css' href='./css/styles.css' />
+	<link rel='stylesheet' type='text/css' href='./css/rodape.css' />
+	<link rel='stylesheet' type='text/css' href='./css/index.css' />
+	<title>I.U.R.I.</title>
+</head>
+<body>
+<div class='principal'>
