--- a/htdocs/html/index_cabecalho.htm
+++ b/htdocs/html/index_cabecalho.htm
@@ -1,1 +1,21 @@
-/home/iggy/var/sites/blog/htdocs/html/index_cabecalho.htm
+<h1>I.U.R.I. - Igreja Universal do Reino do IURI</h1>
+<p>Ningu&eacute;m te chamou aqui.</p>
+<p>
+<ul class='horizontal'>
+	<li><a href='http://harlemify.com/?url=iuri.blog.br' target='_self'><img alt="Não recomendado para seres humanos" text="Não recomendado para seres humanos" width='64' height='64' src='./img/pictograms-aem-0059-no_admittance.png' /></a></li>
+	<li><a href='http://harlemify.com/?url=iuri.blog.br' target='_self'><img alt="Perigo" text="Perigo" width='64' height='64' src='./img/pictogram-ghs-exclam.png' /></a></li>
+	<li><a href='http://harlemify.com/?url=iuri.blog.br' target='_self'><img alt="Risco de incêndio" text="Risco de incêndio" width='64' height='64' src='./img/pictogram-ghs-flame.png' /></a></li>
+	<li><a href='http://harlemify.com/?url=iuri.blog.br' target='_self'><img alt="Risco à saúde humana" text="Risco à saúde humana" width='64' height='64' src='./img/pictogram-ghs-hazardous_to_human_health.png' /></a></li>
+</ul>
+</p>
+<p>
+<ul class='horizontal'>
+	<li><a href='./autor/' target='_self'>Sobre o autor</a></li>
+	<li><a href='./sobre/' target='_self'>Sobre o site</a></li>
+	<li><a href='./sobre/#disclaimer' target='_self'>Disclaimer</a></li>
+	<li><a href='./sobre/#tos' target='_self'>Termos de servi&ccedil;o</a></li>
+	<li><a href='./sobre/#licenca' target='_self'>Licen&ccedil;a</a></li>
+</ul>
+</p>
+<p class='grande'>&gt;&gt;&gt;&nbsp;<span class='importante'><a href='./frases/' target='_self'>FRASES</a></span>&nbsp;&lt;&lt;&lt;</p>
+<hr>
