--- a/htdocs/html/index_corpo_posts_cima.htm
+++ b/htdocs/html/index_corpo_posts_cima.htm
@@ -1,1 +1,10 @@
-/home/iggy/var/sites/blog/htdocs/html/index_corpo_posts_cima.htm
+<table class='postagens'>
+	<caption><h2>Postagens:</h2></caption>
+	<thead>
+		<tr>
+			<td><h3>Links:</h3></td>
+			<td><h3>T&iacute;tulo:</h3></td>
+			<td><h3>Data:</h3></td>
+		</tr>
+	</thead>
+	<tbody>
