Alterei páginas para melhorar conformidade com especificações da w3c de html5

--- a/htdocs/html/index_cabecalho.htm
+++ b/htdocs/html/index_cabecalho.htm
@@ -1,13 +1,15 @@
 <h1>I.U.R.I. - Igreja Universal do Reino do IURI</h1>
 <p>Ningu&eacute;m te chamou aqui.</p>
+<div class='avisos_perigo'>
 <p>
 <ul class='horizontal'>
-	<li><a href='http://harlemify.com/?url=iuri.blog.br' target='_self'><img alt="Não recomendado para seres humanos" text="Não recomendado para seres humanos" width='64' height='64' src='./img/pictograms-aem-0059-no_admittance.png' /></a></li>
-	<li><a href='http://harlemify.com/?url=iuri.blog.br' target='_self'><img alt="Perigo" text="Perigo" width='64' height='64' src='./img/pictogram-ghs-exclam.png' /></a></li>
-	<li><a href='http://harlemify.com/?url=iuri.blog.br' target='_self'><img alt="Risco de incêndio" text="Risco de incêndio" width='64' height='64' src='./img/pictogram-ghs-flame.png' /></a></li>
-	<li><a href='http://harlemify.com/?url=iuri.blog.br' target='_self'><img alt="Risco à saúde humana" text="Risco à saúde humana" width='64' height='64' src='./img/pictogram-ghs-hazardous_to_human_health.png' /></a></li>
+	<li><a href='http://harlemify.com/?url=iuri.blog.br' target='_self'><img alt="Não recomendado para seres humanos" src='./img/pictograms-aem-0059-no_admittance.png' /></a></li>
+	<li><a href='http://harlemify.com/?url=iuri.blog.br' target='_self'><img alt="Perigo" src='./img/pictogram-ghs-exclam.png' /></a></li>
+	<li><a href='http://harlemify.com/?url=iuri.blog.br' target='_self'><img alt="Risco de incêndio" src='./img/pictogram-ghs-flame.png' /></a></li>
+	<li><a href='http://harlemify.com/?url=iuri.blog.br' target='_self'><img alt="Risco à saúde humana" src='./img/pictogram-ghs-hazardous_to_human_health.png' /></a></li>
 </ul>
 </p>
+</div>
 <p>
 <ul class='horizontal'>
 	<li><a href='./autor/' target='_self'>Sobre o autor</a></li>
@@ -17,5 +19,7 @@
 	<li><a href='./sobre/#licenca' target='_self'>Licen&ccedil;a</a></li>
 </ul>
 </p>
-<p class='grande'>&gt;&gt;&gt;&nbsp;<span class='importante'><a href='./frases/' target='_self'>FRASES</a></span>&nbsp;&lt;&lt;&lt;</p>
+<div class='frases'>
+<p>&gt;&gt;&gt;&nbsp;<span><a href='./frases/' target='_self'>FRASES</a></span>&nbsp;&lt;&lt;&lt;</p>
+</div>
 <hr>
