--- a/htdocs/sobre/index.html
+++ b/htdocs/sobre/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html dir='auto' lang='pt-BR'>
 <head>
+	<meta charset='UTF-8' />
 	<meta http-equiv='Content-Type' content="text/html; charset=UTF-8" />
 	<meta name='description' content="I.U.R.I. - Igreja Universal do Reino do IURI - Disclaimer - Licença - Termos de Serviço" />
 	<meta name='keywords' content="I.U.R.I., iuri, iuri guilherme, iuri guilherme dos santos martins, porto alegre, expressão, disclaimer, licença, termos de serviço" />
