--- a/htdocs/html/licenca.htm
+++ b/htdocs/html/licenca.htm
@@ -1,10 +1,12 @@
 <hr>
 <div class='licenca'>
-<span class='licenca_imagens'>
-	<ul class='vertical'>
-		<li><a rel='license' href='http://creativecommons.org/licenses/by/3.0/deed.pt'><img alt="Licença Creative Commons" src='http://i.creativecommons.org/l/by/3.0/88x31.png' /></a></li>
-		<li><img alt="Copyleft" text="Copyleft" src='https://upload.wikimedia.org/wikipedia/commons/5/58/Red_copyleft.svg' height='48px' width='48px' /></li>
-	</ul>
-</span>
-<span class='licenca_texto'>Copyleft 2013 iuri.blog.br<br /><a rel='license' href='http://creativecommons.org/licenses/by/3.0/deed.pt'>Creative Commons - Atribui&ccedil;&atilde;o  3.0 N&atilde;o Adaptada</a>.<br />Mais em <a xmlns:cc='http://creativecommons.org/ns#' href='http://iuri.blog.br/sobre/' rel='cc:morePermissions'>iuri.blog.br/sobre</a>.</span>
+<div class='licenca_imagens'>
+<ul class='vertical'>
+	<li><a rel='license' href='http://creativecommons.org/licenses/by/3.0/deed.pt'><img alt="Licença Creative Commons" src='http://i.creativecommons.org/l/by/3.0/88x31.png' /></a></li>
+	<li><img alt="Copyleft" src='https://upload.wikimedia.org/wikipedia/commons/5/58/Red_copyleft.svg' height='48px' width='48px' /></li>
+</ul>
+</div>
+<div class='licenca_texto'>
+<span>Copyleft 2013 iuri.blog.br<br /><a rel='license' href='http://creativecommons.org/licenses/by/3.0/deed.pt'>Creative Commons - Atribui&ccedil;&atilde;o  3.0 N&atilde;o Adaptada</a>.<br />Mais em <a xmlns:cc='http://creativecommons.org/ns#' href='http://iuri.blog.br/sobre/' rel='cc:morePermissions'>iuri.blog.br/sobre</a>.</span>
+</div>
 </div>
