Alterei para valores em pixels os atributos height e width das imagens

--- a/htdocs/html/index_rodape_cima.htm
+++ b/htdocs/html/index_rodape_cima.htm
@@ -1,6 +1,6 @@
 <ul class='horizontal'>
 	<li><a href='http://www.brasil.gov.br/?set_language=pt-br' target='_blank'><img alt="Hospedado e desenvolvido no Brasil" src='./img/flags-brazil.png' /></a></li>
-	<li><a href='http://www.vim.org/' target='_blank'><img alt="Designed using VIM" text="Designed using VIM" src='./img/designed_using_vim.png' /></a></li>
+	<li><a href='http://www.vim.org/' target='_blank'><img alt="Designed using VIM" src='./img/designed_using_vim.png' /></a></li>
 	<li><a href='http://www.gimp.org/' target='_blank'><img alt="Designed with G.I.M.P." src='./img/designed_with_gimp.png' /></a></li>
 	<li><a href='https://www.kernel.org/' target='_blank'><img alt="Powered by Linux" src='./img/powered_by_linux.png' /></a></li>
 	<li><a href='http://www.debian.org/' target='_blank'><img alt="Powered by Debian" src='./img/linux_distribution-debian.png' /></a></li>
@@ -16,7 +16,7 @@
 </ul>
 <ul class='horizontal'>
 	<li><a href='https://creativecommons.org/' target='_blank'><img alt="Licença Creative Commons" src='./img/licenses-cc-creative_commons.png' /></a></li>
-	<li><a href='http://www.gnu.org/copyleft/copyleft.html' target='_blank'><img alt="Licençe Copyleft" src='./img/licenses-copyleft.png' /></a></li>
+	<li><a href='http://www.gnu.org/copyleft/copyleft.html' target='_blank'><img alt="Licença Copyleft" src='./img/licenses-copyleft.png' /></a></li>
 	<li><a href='http://www.kopimi.com/kopimi/' target='_blank'><img alt="Licença Kopimi" src='./img/licenses-kopimi.png' /></a></li>
 	<li><a href='https://github.com/iuriguilherme/iuri.blog.br' target='_blank'><img alt="Código fonte do site" src='./img/save_as-2.png' /></a></li>
 </ul>
