Novo layout da página inicial

--- a/index.html
+++ b/index.html
@@ -15,29 +15,25 @@
 <header>
 	<h1>I.U.R.I. - Igreja Universal do Reino do IURI</h1>
 	<p>Ningu&eacute;m te chamou aqui.</p>
-	<div class="menu horizontal">
-		<ul>
-			<li><a href='./autor/' target='_self'>Autor</a></li>
-			<li><a href='./sobre/' target='_self'>Sobre</a></li>
-			<li><a href='./blogs/' target='_self'>Blogs</a></li>
-			<li><a href='http://iuri.neocities.org' target='_blank'>iuri.neocities.org</a></li>
-		</ul>
-	</div>
 </header>
 <hr>
 <main>
 	<div class='ordem'>&nbsp;</div>
 	<div class='baphomet'>
 		<ul>
-			<li class='li_topo'><img src='./img/botao_transparente_332.png' /></li>
-			<li class='li_branco'><a class='a_branco' href='http://branco.iuri.blog.br/' target='_blank'><img src='./img/branco_256.png' /></a><a class='a_preto' href='http://preto.iuri.blog.br/' target='_blank'><img src='./img/preto_256.png' /></a></li>
-			<li class='li_indigo'><a class='a_indigo' href='http://indigo.iuri.blog.br/' target='_blank'><img src='./img/indigo_256.png' /></a></li>
-			<li class='li_azul'><a class='a_azul' href='http://azul.iuri.blog.br/' target='_blank'><img src='./img/azul_256.png' /></a></li>
-			<li class='li_verde'><a class='a_rosa' href='http://rosa.iuri.blog.br/' target='_blank'><img src='./img/rosa_256.png' /></a><a class='a_verde' href='http://verde.iuri.blog.br/' target='_blank'><img src='./img/verde_256.png' /></a></li>
-			<li class='li_amarelo'><a class='a_amarelo' href='http://amarelo.iuri.blog.br/' target='_blank'><img src='./img/amarelo_256.png' /></a></li>
-			<li class='li_laranja'><a class='a_laranja' href='http://laranja.iuri.blog.br/' target='_blank'><img src='./img/laranja_256.png' /></a></li>
-			<li class='li_vermelho'><a class='a_vermelho' href='http://vermelho.iuri.blog.br/' target='_blank'><img src='./img/vermelho_256.png' /></a></li>
-			<li class='li_fundo'><img src='./img/botao_transparente_332.png' /></li>
+			<li class='li_01'><a href='./blogs/' target='_self'><img src='./img/botao_blogs.png' /></a></li>
+			<li class='li_02'><a href='./sobre/' target='_self'><img src='./img/botao_sobre.png' /></a><img src='./img/botao_transparente_128.png' /><a href='./autor/' target='_self'><img src='./img/botao_autor.png' /></a></li>
+			<li class='li_03'><a class='a_branco' href='http://branco.iuri.blog.br/' target='_blank'><img src='./img/branco_256.png' /></a></li>
+			<li class='li_04'><a class='a_indigo' href='http://indigo.iuri.blog.br/' target='_blank'><img src='./img/indigo_256.png' /></a></li>
+			<li class='li_05'><a class='a_azul' href='http://azul.iuri.blog.br/' target='_blank'><img src='./img/azul_256.png' /></a></li>
+			<li class='li_06'><a class='a_rosa' href='http://rosa.iuri.blog.br/' target='_blank'><img src='./img/rosa_256.png' /></a></li>
+			<li class='li_07'><a class='a_verde' href='http://verde.iuri.blog.br/' target='_blank'><img src='./img/verde_256.png' /></a></li>
+			<li class='li_08'><a class='a_amarelo' href='http://amarelo.iuri.blog.br/' target='_blank'><img src='./img/amarelo_256.png' /></a></li>
+			<li class='li_09'><a class='a_laranja' href='http://laranja.iuri.blog.br/' target='_blank'><img src='./img/laranja_256.png' /></a></li>
+			<li class='li_10'><a class='a_vermelho' href='http://vermelho.iuri.blog.br/' target='_blank'><img src='./img/vermelho_256.png' /></a></li>
+			<li class='li_11'><a class='a_preto' href='http://preto.iuri.blog.br/' target='_blank'><img src='./img/preto_256.png' /></a></li>
+			<li class='li_12'><a href='http://www.vim.org/' target='_blank'><img src='./img/botao_vim.png' /></a>&nbsp;<a href='http://www.gimp.org/' target='_blank'><img src='./img/botao_gimp.png' /></a></li>
+			<li class='li_13'><a href='https://www.linux.com/' target='_blank'><img src='./img/botao_linux.png' /></a>&nbsp;<a href='http://www.kopimi.com/' target='_blank'><img src='./img/botao_kopimi.png' /></a></li>
 		</ul>
 	</div>
 </main>
