--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 	<meta charset='UTF-8' />
 	<meta http-equiv='Content-Type' content="text/html; charset=UTF-8" />
 	<meta name='description' content="I.U.R.I. - Igreja Universal do Reino do IURI" />
-	<meta name='keywords' content="I.U.R.I., iuri, Iuri Guilherme, Iuri Guilherme dos Santos Martins, Porto Alegre, blog, iuri.blog.br, Divinum Humanum Comoedia e Noite, Luta e Amor, Guerra e Amor, Somos Todxs Lixo, Paradoxo Injusto, Politicamente Improvável" />
+	<meta name='keywords' content="I.U.R.I., iuri, Iuri Guilherme, Iuri Guilherme dos Santos Martins, Porto Alegre, blog, iuri.blog.br, Ao Que Meu Peito Sente, Divinum Humanum Comoedia e Noite, Luta e Amor, Garimpeiro do Universo, Guerra e Amor, Somos Todxs Lixo, Paradoxo Injusto, Politicamente Improvável" />
 	<link rel='stylesheet' type='text/css' href='./css/estilos.css' />
 	<link rel='stylesheet' type='text/css' href='./css/index.css' />
 	<link rel='stylesheet' media='screen' href='http://openfontlibrary.org/face/univers-else' rel='stylesheet' type='text/css' />
