Alterado ano do Copyleft

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 <!--<![endif]-->
 <div class='separador'>&nbsp;</div>
 <footer>
-	<p>Copyleft 2013 iuri.blog.br - Licen&ccedil;as descritas em <a href='./sobre/#licenca' target='_blank'>iuri.blog.br/sobre/#licenca</a>.</p>
+	<p>Copyleft 2013-2014 iuri.blog.br - Licen&ccedil;as descritas em <a href='./sobre/#licenca' target='_blank'>iuri.blog.br/sobre/#licenca</a>.</p>
 </footer>
 </body>
 </html>
