Alterado "Ninguém te chamou aqui" para h2

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <body>
 <header>
 	<h1>I.U.R.I. - Igreja Universal do Reino do IURI</h1>
-	<p>Ningu&eacute;m te chamou aqui.</p>
+	<h2>Ningu&eacute;m te chamou aqui.</h2>
 </header>
 <hr>
 <main>
