Alterando Somos Todxs Lixo para violeta

--- a/blogs/index.html
+++ b/blogs/index.html
@@ -20,7 +20,8 @@
 <main>
 <div class="lista">
 	<ul>
-		<li><a href='http://branco.iuri.blog.br/' target='_blank'><img src='../img/branco_72.png' /></a> <a href='http://branco.iuri.blog.br/' target='_blank'>Somos Todxs Lixo</a> (<a href='http://branco.iuri.blog.br/' target='_blank'>branco.iuri.blog.br</a>)</li>
+		<li><a href='http://branco.iuri.blog.br/' target='_blank'><img src='../img/branco_72.png' /></a> <a href='http://branco.iuri.blog.br/' target='_blank'>Paz</a> (<a href='http://branco.iuri.blog.br/' target='_blank'>branco.iuri.blog.br</a>)</li>
+		<li><a href='http://violeta.iuri.blog.br/' target='_blank'><img src='../img/violeta_72.png' /></a> <a href='http://violeta.iuri.blog.br/' target='_blank'>Somos Todxs Lixo</a> (<a href='http://violeta.iuri.blog.br/' target='_blank'>violeta.iuri.blog.br</a>)</li>
 		<li><a href='http://preto.iuri.blog.br/' target='_blank'><img src='../img/preto_72.png' /></a> <a href='http://preto.iuri.blog.br/' target='_blank'>Garimpeiro do Universo</a> (<a href='http://preto.iuri.blog.br/' target='_blank'>preto.iuri.blog.br</a>)</li>
 		<li><a href='http://indigo.iuri.blog.br/' target='_blank'><img src='../img/indigo_72.png' /></a> <a href='http://indigo.iuri.blog.br/' target='_blank'>Politicamente Improv&aacute;vel</a> (<a href='http://indigo.iuri.blog.br/' target='_blank'>indigo.iuri.blog.br</a>)</li>
 		<li><a href='http://azul.iuri.blog.br/' target='_blank'><img src='../img/azul_72.png' /></a> <a href='http://azul.iuri.blog.br/' target='_blank'>Paradoxo Injusto</a> (<a href='http://azul.iuri.blog.br/' target='_blank'>azul.iuri.blog.br</a>)</li>
