--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 		<ul>
 			<li class='li_01'><a href='./blogs/' target='_self'><img src='./img/botao_blogs.png' /></a></li>
 			<li class='li_02'><a href='./sobre/' target='_self'><img src='./img/botao_sobre.png' /></a><img src='./img/botao_transparente_128.png' /><a href='./autor/' target='_self'><img src='./img/botao_autor.png' /></a></li>
-			<li class='li_03'><a class='a_branco' href='http://branco.iuri.blog.br/' target='_blank'><img src='./img/branco_256.png' /></a></li>
+			<li class='li_03'><a class='a_violeta' href='http://violeta.iuri.blog.br/' target='_blank'><img src='./img/violeta_256.png' /></a></li>
 			<li class='li_04'><a class='a_indigo' href='http://indigo.iuri.blog.br/' target='_blank'><img src='./img/indigo_256.png' /></a></li>
 			<li class='li_05'><a class='a_azul' href='http://azul.iuri.blog.br/' target='_blank'><img src='./img/azul_256.png' /></a></li>
 			<li class='li_06'><a class='a_rosa' href='http://rosa.iuri.blog.br/' target='_blank'><img src='./img/rosa_256.png' /></a></li>
